--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,3 +1,17 @@
-body{
-	background-color:  black;
+body {
+    background-color: black;
+  }
+
+h1,h2,li,strong {
+	color: orange;
+	margin-left: 20px;
+}
+h1 
+{
+	text-align: center;
+}
+#imag 
+{
+	height: auto;
+	width: auto;
 }
