--- a/css/estilos.css
+++ b/css/estilos.css
@@ -5,13 +5,18 @@ body {
 h1,h2,li,strong {
 	color: orange;
 	margin-left: 20px;
+	font-family: 'Shantell Sans', cursive;
 }
 h1 
 {
 	text-align: center;
+	padding: 30px 20px;
 }
 #imag 
 {
 	height: auto;
 	width: auto;
+}
+*{
+	font-family: 'Shantell Sans', cursive;
 }
